<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/main_menu" />
    </group>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/profile_title"
            android:title="@string/profile">

            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_stats"
                    android:icon="@drawable/ic_baseline_leaderboard_24"
                    android:title="@string/stats" />
            </menu>

        </item>

    </group>

    <item
        android:title="@string/friend_store_title">

        <menu>

            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_baseline_groups_24"
                android:title="@string/friend_list"/>
            <item
                android:id="@+id/nav_store"
                android:icon="@drawable/ic_baseline_local_grocery_store_24"
                android:title="@string/store" />
        </menu>

    </item>

</menu>
