<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_friend_invitation"
        android:textColor="?android:textColor"
        android:textSize="22sp"
        android:layout_gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/mainDividerColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/active_users_title"
        android:textSize="18sp"
        android:textColor="?android:textColor"
        android:layout_gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:background="@drawable/board_border"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dismiss_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textSize="16sp"
        android:textColor="?android:textColorSecondary"
        android:padding="8dp"
        android:background="@drawable/teal_shadow_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"/>
</LinearLayout>

