<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/possible_words_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/white_background"
    android:layout_margin="5dp"
    android:padding="5dp">

    <TextView
        android:id="@+id/possible_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColor"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/possible_word_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/possible_word_points"
        android:textColor="?android:textColor"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/possible_word_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/possible_word_orientation"
        android:textColor="?android:textColor"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginStart="10dp"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_possible_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:textColor="?android:textColorSecondary"
        android:background="@drawable/button_selector"
        android:textAlignment="textEnd"/>
</LinearLayout>
