<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateGameActivity"
    android:background="?attr/backgroundColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Jeu du Scrabble - Équipe 107"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="?android:textColor"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_game_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/black_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/game_settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/game_settings"
            android:textColor="?android:textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/duration_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/game_settings_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/duration"
                android:textColor="?android:textColor"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp">

                <Spinner
                    android:id="@+id/spinner_minutes"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="?attr/spinnerArrowColor"
                    android:hint="@string/minute"
                    />
                <Spinner
                    android:id="@+id/spinner_secondes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="?attr/spinnerArrowColor"
                    android:hint="@string/seconde"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dictionary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_layout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dictionary"
                android:textColor="?android:textColor"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:id="@+id/spinner_dictionary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="?attr/spinnerArrowColor"
                    android:hint="@string/dictionary"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="?android:textColor"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/party_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/black_border"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dictionary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/party_type"
                android:textColor="?android:textColor"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/public_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/everyone"
                        android:textColor="?android:textColor"/>

                    <RadioButton
                        android:id="@+id/private_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restricted"
                        android:textColor="?android:textColor"/>
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/party_type">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="?attr/buttonBarNegativeButtonStyle"
                android:text="@string/back"
                android:padding="5dp"
                android:textColor="?android:textColorSecondary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/navy_blue"
                android:text="@string/Continue"
                android:padding="5dp"
                android:textColor="?android:textColorSecondary" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
