<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.menus.statistics.StatsFragment"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/statistics"
            android:textColor="?android:textColor"
            android:textSize="22sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/mainDividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_played"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_points_per_game"
                    android:textColor="?attr/titleTextColor"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/games_played"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColor"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="@drawable/white_background"/>
                <TextView
                    android:id="@+id/average_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColor"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="@drawable/white_background"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games_won"
                    android:textColor="?attr/titleTextColor"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_time_per_game"
                    android:textColor="?attr/titleTextColor"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <TextView
                    android:id="@+id/games_won"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColor"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="@drawable/white_background"/>
                <TextView
                    android:id="@+id/average_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColor"
                    android:textSize="24sp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:background="@drawable/white_background"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/connections_history"
            android:textColor="?android:textColor"
            android:textSize="22sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/mainDividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/logins_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/connections"
                    android:textColor="?android:textColor"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/logins"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/white_background"
                    android:padding="8dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginStart="10dp">

                <TextView
                    android:id="@+id/logouts_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/disconnections"
                    android:textColor="?android:textColor"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/logouts"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/white_background"
                    android:padding="8dp"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/games_history"
            android:textColor="?android:textColor"
            android:textSize="22sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?attr/mainDividerColor" />



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/games_history"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="20dp"
            android:background="@drawable/white_background"
            android:padding="10dp" />

    </LinearLayout>

</FrameLayout>
